css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

* {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  font-family: "Roboto", sans-serif;
}

h1,
h2,
h3,
h4,
h5 {
  font-size: 18px;
  margin-bottom: 15px;
  font-family: "Rubik", sans-serif;
}

p {
  line-height: 1.4;
}

header {
  width: 800px;
  margin: auto;
}

header nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 0 auto;
  margin-top: 20px;
  margin-bottom: 20px;
}

header nav img {
  margin-bottom: 10px;
}

header nav a {
  padding-top: 20px;
  color: black;
  margin-right: 20px;
  text-decoration: none;
}

header nav a:hover {
  text-decoration: underline;
  font-weight: bolder;
}

header .header-img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 30px;
}

.container {
  width: 800px;
  margin: 0 auto;
}

.top-content {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  margin-bottom: 20px;
  border-bottom: 1px dashed black;
}

.top-content .text-container {
  width: 48%;
  padding: 0 1%;
  padding-bottom: 20px;
}

.middle-content {
  margin-bottom: 20px;
  border-bottom: 1px dashed black;
}

.middle-content h2 {
  padding: 0 2%;
  margin-bottom: 0;
}

.middle-content .boxes {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.middle-content .boxes .box {
  width: 12.5%;
  height: 100px;
  background: black;
  margin: 20px 2.5%;
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
}

#teal {
  background-color: teal;
}

#gold {
  background-color: gold;
}

#cadetblue {
  background-color: cadetblue;
}

#coral {
  background-color: coral;
}

#crimson {
  background-color: crimson;
}

#forestgreen {
  background-color: forestgreen;
}

#darkorchid {
  background-color: darkorchid;
}

#hotpink {
  background-color: hotpink;
}

#indigo {
  background-color: indigo;
}

#dodgerblue {
  background-color: dodgerblue;
}

.bottom-content {
  display: flex;
  margin: 0 2% 20px;
  justify-content: space-around;
}

.bottom-content .text-container {
  padding-right: 4%;
}

.bottom-content .text-container:last-child {
  padding-right: 0;
}

footer {
  width: 100%;
  background: black;
}

footer nav {
  width: 60%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px 2%;
  font-size: 14px;
}

footer nav a {
  color: white;
  text-decoration: none;
}

footer nav a:hover {
  text-decoration: underline;
  font-weight: bolder;
}

/* About Page specific styles */

.about-top-content {
  border-bottom: 1px dotted black;
  padding-bottom: 20px;
  text-align: justify;
}

.about-middle-content {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 10px;
}

.about-middle-content .about-boxes {
  width: 380px;
  padding-top: 20px;
  padding-bottom: 20px;
  /* padding-right: 15px; */
  text-align: justify;
  border-bottom: 1px dotted black;
}

.about-middle-content .about-boxes button {
  border: 1px solid black;
  border-radius: 10px;
  padding: 10px 30px;
  margin-top: 10px;
}

.about-middle-content .about-boxes button:hover {
  background-color: black;
  color: white;
  cursor: pointer;
}

.about-bottom-content {
  margin-top: 30px;
  margin-bottom: 30px;
  text-align: justify;
}

.about-middle-content .about-boxes .pix {
  width: 380px;
  margin-bottom: 10px;
}

/* Contact Page specific styles */

.form {
  width: 800px;
  margin: 0 auto;
  margin-bottom: 30px;
}

input[type=text] {
  width: 200px;
  border-radius: 10px; 
  background-color: #f8f8f8; 
  border: 2px solid #ccc;
  outline: none;
}

form #message {
  width: 300px;
  height: 150px;
  border-radius: 10px;
  box-sizing: border-box;
  border: 2px solid #ccc;
  background-color: #f8f8f8;
  outline: none;
  resize: none;
}

input[type=submit] {
  border-radius: 10px; 
  background-color: #EEFFE6; 
  border: 2px solid #ccc;
  padding: 5px 20px;
}

input[type=submit]:hover {
  background-color: #D6E6CF;
  cursor: pointer;
}

.contact-footer {
  position: absolute;
  bottom: 0;
}

